--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,14 @@
 
 FONTOS:
-- 2. fokú LP szûrõt tervezni (2 héten belül készre); átviteli fgv méréskor rákötni a madaq-ra - mûszerelektronika
+- 2. fokú LP szûrõ panelt tervezni; átviteli fgv méréskor rákötni a madaq-ra - lásd. mûszerelektronika
 - BNC + SUB-D csatlakozóval
-- jumperekkel/analóg kapcsolóval a szûrõ paramétereit állítani ÉS/VAGY digitálisan állítható szûrõmodul (bonyolult)
+- kb 2 héten belül készre? - mert sokáig tart legyártani; hétvégén gondolkodni rajta
+- jumperekkel/analóg kapcsolóval a szûrõ paramétereit állítani ( + digitálisan állítható szûrõmodul (bonyolult))
 
 FONTOS #2:
 - labview progi átviteli fgv méréshez
+- see MSE 9. óra, AC-Transfer.vi
+- see MSE 11 óra
 
 
 
@@ -13,4 +16,4 @@ NEM annyira fontos:
 - 256 mintáig tárolni (127 helyett) + esetleg belsõ memóriába
 - DMA-s mérés
 
-- visszamérni/számolni a tényleg signal freq-et
+- visszamérni/számolni a valós signal freq-et
